welcome.lessons.welcome.array.array667.Array667.scala.error
array667:17: error: expected class or object definition
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
^array667:32: error: Unmatched closing brace '}' ignored here
 }
 ^