welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
	var j:Int=0
	
	if(nums(indexOfValue(nums,6))==nums((indexOfValue(nums,6))+1)){
			 j = j + 1
			 return j
	
	}else{
		return -1
		
		
		
}

}
}
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	var i = 0
	while(i < nums.length && nums(i) != value){
  	i = i + 1
  }
  if(i < nums.length){
  	return i 
  }else{
  	return -1
  }
}



